# livespec-overseer

./: .livespec.jsonc  AGENTS.md  CHANGELOG.md  README.md  justfile  pyproject.toml  release-please-config.json
.beads/: config.yaml
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/prose/: overseer.md  supervise-plan.md
.claude-plugin/skills/overseer/: SKILL.md
.claude-plugin/skills/supervise-plan/: SKILL.md
.github/scripts/: export-ci-telemetry.sh
.github/workflows/: ci.yml
SPECIFICATION/: README.md  constraints.md  contracts.md  non-functional-requirements.md  spec.md
SPECIFICATION/history/v001/: scenarios.md
SPECIFICATION/history/v001/proposed_changes/: seed.md
SPECIFICATION/proposed_changes/: non-interference-attended-skill-carveout.md
overseer/: AGENTS.md  SKILL.md  __init__.py  claude_sessions.py  codex_sessions.py  conftest.py  daemon.py  jsonio.py  marker-protocol.md  overseer-start  overseerd  registry.py  signals.py  start.py  streams.py  supervisor.py  test_claude_sessions.py  test_codex_sessions.py  test_jsonio.py  test_overseer_start.py  test_plugin_structure.py  test_registry.py  test_signals.py  test_streams.py  test_supervisor.py  test_tmuxio.py  tmuxio.py  version.py
plan/cutover-and-shipping/: handoff.md  supervisor-handoff.md
plan/cutover-and-shipping/research/: operator-surface.md  phase-2-adopter-shipping.md
tests/: heading-coverage.json
