# livespec-overseer — Control-Plane operator tool (repo class `control-plane-tool`).
#
# NOTE ON SHAPE. This file deliberately carries a FULL gate configuration rather
# than the minimal "a pin and nothing else" shape `livespec-console-beads-fabro`
# uses. The console is pure Rust and needs Python only to reuse the shared
# commit-refuse hook installer; this repo IS Python, and its ruff / pyright-strict
# / 100%-coverage gates are configured HERE. Seven config rows were relocated
# verbatim from livespec core's pyproject when the overseer moved out; dropping
# any of them silently retires a gate the folder earned.

[project]
name = "livespec-overseer"
version = "0.1.0"
description = "Control-Plane operator tool for livespec: a two-pane tmux supervisor that watches tracked sessions' context headroom, injects an escalating wrap-up at threshold, and restarts a session only once it declares itself ready. Peer of livespec-console-beads-fabro, not a component of it."
requires-python = ">=3.10.16"
authors = [
    { name = "Chad Woolley", email = "thewoolleyman@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"

# ZERO runtime dependencies, deliberately. The supervisor is stdlib-only
# (argparse, json, pathlib, subprocess, fcntl, re, os, sys, time, traceback,
# dataclasses, typing, contextlib, datetime, itertools, shlex, tempfile,
# collections) plus its own modules. It imports nothing from livespec core, no
# Driver, and no orchestrator — which is why it could be relocated at all. Keep
# this list empty; a new runtime dependency is a design decision, not a detail.
dependencies = []

[dependency-groups]
# Every Python dev tool is uv-managed here (resolved into uv.lock, installed
# into a project-local .venv via `uv sync --all-groups`). Mise pins only the
# non-Python binaries in .mise.toml. Versions mirror livespec core's pins
# exactly per livespec/SPECIFICATION/non-functional-requirements.md
# §"Shared content provenance".
dev = [
    "ruff==0.8.6",
    "pyright==1.1.391",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "pytest-icdiff==0.9",
    "pytest-xdist==3.8.0",
    "livespec-dev-tooling",
]

[tool.uv.sources]
# Pinned to the release that introduced this repo's own class,
# `control-plane-tool` (livespec-dev-tooling PR #502). As a pin-CONSUMING class
# this repo receives automatic bump-pin PRs — that participation is the whole
# reason the `console` class could not be reused, since `_PIN_WEB_CLASSES` is
# the subtraction set `_ALL_CLASSES - {"console"}`.
livespec-dev-tooling = { git = "https://github.com/thewoolleyman/livespec-dev-tooling.git", tag = "v0.54.0" }

[tool.livespec_dev_tooling]
# Role trees, declared EXPLICITLY EMPTY. Without this section the loader falls
# back to defaults naming core's layout (`.claude-plugin/scripts/livespec`,
# `.../io`, `.../commands`, `.../parse`, `dev-tooling`), none of which exist
# here, and `check-source-trees-scoped-to-consumer` fails with six
# "role is not scoped to this consumer" errors.
#
# Empty rather than `source_trees = ["overseer"]`, and that is a deliberate
# ordering choice, not laziness. Declaring the tree ACTIVATES the Result-railway
# checks (`no-raise-outside-io`, `no-except-outside-io`, `public-api-result-typed`)
# over this package. That is Gate E of plan/overseer-productization, whose whole
# hazard is enforcement landing before adoption — and livespec core itself
# currently has all four of these keys empty for the same reason. Matching core
# keeps the move behavior-preserving; arming the railway here is a separate,
# deliberate decision with its own verification, coordinated with the
# rop-sweep-fleet-policy thread.
source_trees = []
io_trees = []
commands_trees = []
pure_trees = []
covered_trees = []
supervisor_entry_files = []

# ---------------------------------------------------------------------------
# Ruff — sole linter, formatter, import-sorter, complexity checker.
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py310"
# Copied from core. `.claude/hooks/**` is deliberately outside ruff fleet-wide:
# hook scripts are fail-open boundary code whose blind catches and direct prints
# are the contract, not a smell.
extend-exclude = [
    "**/_vendor/**",
    "**/__pycache__/**",
    "mutants/**",
    ".claude/hooks/**",
]
# RELOCATED ROW 1/7. Ruff resolves files by EXTENSION, so the two extensionless
# executables (`overseerd`, `overseer-start` — Python with a shebang, invoked by
# bare name) are invisible to it without this. They were silently unlinted for
# months before core added this; the glob matches the folder's `overseer*`
# naming convention rather than naming them individually.
extend-include = ["overseer/overseer*"]

[tool.ruff.lint]
# Rule set copied VERBATIM from livespec core's `[tool.ruff.lint]`, which is
# what gated this code before the move. An earlier draft used `select = ["ALL"]`
# with a hand-written ignore list and produced 72 findings against code that was
# already clean — an approximated rule set is a DIFFERENT gate, not a stricter
# one. Keep this in lockstep with core's list.
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "SIM",   # flake8-simplify
    "C90",   # mccabe complexity
    "N",     # pep8-naming
    "RUF",   # ruff-specific
    "PL",    # pylint
    "PTH",   # flake8-use-pathlib
    "TRY",   # tryceratops
    "FBT",   # flake8-boolean-trap
    "PIE",   # flake8-pie
    "SLF",   # flake8-self
    "LOG",   # flake8-logging
    "G",     # flake8-logging-format
    "TID",   # flake8-tidy-imports
    "ERA",   # eradicate — bans commented-out code (LLM artifact)
    "ARG",   # flake8-unused-arguments
    "RSE",   # flake8-raise
    "PT",    # flake8-pytest-style
    "FURB",  # refurb
    "SLOT",  # flake8-slots
    "ISC",   # flake8-implicit-str-concat
    "T20",   # flake8-print — the daemon's output goes through streams.py
    "S",     # flake8-bandit
    "BLE",   # flake8-blind-except
]
ignore = [
    "ISC001",  # implicit-str-concat on one line; conflicts with the formatter
    "PLC0414",
]
# Domain vocabulary: the prompt glyphs Claude Code and Codex print, which this
# tool literally parses out of real TUIs. A two-codepoint repo-wide allowance is
# NARROWER than a per-file-ignore, which would disable RUF001/2/3 across whole
# files and hide a genuinely confusable character introduced later.
allowed-confusables = ["❯", "›"]

[tool.ruff.lint.pylint]
max-args = 6
max-positional-args = 6
max-branches = 10
max-statements = 30

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"abc.ABC" = { msg = "use typing.Protocol" }
"abc.ABCMeta" = { msg = "use typing.Protocol" }
"abc.abstractmethod" = { msg = "use typing.Protocol" }
"pickle" = { msg = "arbitrary-code-execution surface on load(); use JSON / JSONC" }
"marshal" = { msg = "arbitrary-code-execution surface on load(); use JSON / JSONC" }
"shelve" = { msg = "arbitrary-code-execution surface on load(); use JSON / JSONC" }

[tool.ruff.lint.per-file-ignores]
# RELOCATED ROW 2/7. Copied verbatim from core's
# `.claude/skills/overseer/test_*.py` entry. The first six inherit the product
# `tests/**.py` rationale; the last three are beside-test-specific — SLF001
# (testing private decision helpers directly IS the point of a beside-test) and
# ARG001/2 (signature-matching test doubles must accept args they do not use).
"overseer/test_*.py" = [
    "S101", "PLR2004", "PT018", "S105", "S108", "TRY003",
    "SLF001", "ARG001", "ARG002",
]

# ---------------------------------------------------------------------------
# Pyright — strict, no pragma, no suppression.
# ---------------------------------------------------------------------------

[tool.pyright]
# RELOCATED ROW 3/7. The folder PLUS the two extensionless executables named
# individually — pyright's `include` also resolves by extension, so
# `overseer` alone does NOT reach them.
include = ["overseer", "overseer/overseer-start", "overseer/overseerd"]
# RELOCATED ROW 4/7. Tests are not source. Repo-wide, pyright checks SOURCE and
# the product `tests/` tree is out of scope simply by never appearing in
# `include`. These tests live BESIDE their source, so applying the identical
# rule takes an explicit exclude rather than an omission. This is the repo's
# existing rule spelled out — NOT an overseer exemption.
exclude = ["overseer/test_*.py", "overseer/conftest.py", "**/__pycache__/**"]
pythonVersion = "3.10"
typeCheckingMode = "strict"

reportUnusedCallResult = "error"
reportImplicitOverride = "error"
reportUninitializedInstanceVariable = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnnecessaryCast = "error"
reportUnnecessaryIsInstance = "error"
# NOTE: core does NOT enable `reportImplicitStringConcatenation`, and this repo
# deliberately matches core rather than livespec-runtime, which does. Enabling it
# turns 15 pre-existing, deliberate multi-line message strings in this code into
# errors — a rule the code was never written against. Raising the bar is a
# separate decision from relocating the code; do it on purpose or not at all.
#
# Same reasoning, different rule. `reportPrivateUsage` fires TWICE here and ZERO
# times in core on byte-identical code, because the two gates are not actually
# equivalent: under core's dotted `.claude/skills/overseer/` path pyright does
# not resolve `import supervisor`, so it never learns that `_build_supervisor`
# and `_do_launch` are private, and the finding cannot fire. Moving to a normal
# `overseer/` directory makes the import resolvable and the finding appear.
#
# Both findings are REAL — `overseer-start` reaches `supervisor._build_supervisor`
# and a caller reaches `_do_launch` across the class boundary. They are demoted
# rather than suppressed silently, and rather than fixed inline, because
# promoting two names to public API is a design change and this commit is a
# RELOCATION: it must not quietly alter the gate the code was written against.
# Fixing them properly (a public entry-point surface for the two executables) is
# genuinely worth doing — as its own change, against its own tests.
reportPrivateUsage = "warning"

# ---------------------------------------------------------------------------
# Pytest.
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["overseer"]
addopts = "-q"

# ---------------------------------------------------------------------------
# Coverage — 100% statements AND branches.
# ---------------------------------------------------------------------------

[tool.coverage.run]
branch = true
# RELOCATED ROW 5/7. Coverage measures the code under test, not the test code,
# mirroring the pyright exclude above.
omit = [
    "*/.venv/*",
    "*/site-packages/*",
    "*/__pycache__/*",
    "/tmp/*",
    "overseer/test_*.py",
    "overseer/conftest.py",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = false
# `exclude_also` — NOT `exclude_lines`. This distinction is load-bearing and cost
# a debugging round: `exclude_lines` REPLACES coverage.py's built-in default
# exclusions, while `exclude_also` ADDS to them. Using `exclude_lines` here
# dropped the defaults and made `tmuxio.py` report 144 statements / 70 branches
# instead of core's 126 / 34 — the delta being the 18 `Protocol` method stubs
# whose bodies are a bare `...`, which the defaults elide. The file is
# byte-identical to core's; only the config differed.
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "raise ImportError",
    "@overload",
    "if __name__ == .__main__.:",
    "sys.path.insert",
    "case _:",
]
